Added content credit

--- a/index.html
+++ b/index.html
@@ -6,14 +6,12 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
- <script type="text/javascript" src="tribute.js"></script>
 
 
 
 <link type="text/css" href="tribute.css" rel="stylesheet"/>
 <link type="text/css" href="animate.css" rel="stylesheet"/>
- <link href='https://fonts.googleapis.com/css?family=Lora:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+ <link href='https://fonts.googleapis.com/css?family=Playfair+Display|Merriweather:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,800,600,400italic' rel='stylesheet' type='text/css'>
 </head>
 
@@ -211,9 +209,13 @@
 
     </div>
   </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+ <script type="text/javascript" src="tribute.js"></script>
+
 </body>
 <footer>
   <a href="http://www.theplayerstribune.com/author/rwilson/" class="animated">Read Russell Wilson in his own words</a>
+<span id="credit">Content credit: <a href="http://www.hawkblogger.com/">Hawk Blogger</a></span>
 </footer>
  <div class=".container-fluid">
     <div class="row">
